--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
