--- a/package.json
+++ b/package.json
@@ -8,11 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
+    "element-ui": "^2.14.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "mavon-editor": "^2.9.0",
     "mysql": "^2.18.1",
+    "save": "^2.4.0",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -22,6 +33,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
