--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "mavon-editor": "^2.9.0",
+    "multiparty": "^4.2.2",
     "mysql": "^2.18.1",
     "save": "^2.4.0",
+    "silly-datetime": "^0.1.2",
     "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
@@ -41,6 +43,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "wowjs": "^1.1.3"
   }
 }
